<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.fragments.AddMeetingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/topic_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                app:boxBackgroundColor="@color/bckgrnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/topic_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/meeting_topic"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoCorrect"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/field"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_baseline_topic_24"
                    app:drawableTint="@color/field" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/attendees_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:boxBackgroundColor="@color/bckgrnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topic_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/attendees_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/meeting_attendees"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/field"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_baseline_group_24"
                    app:drawableTint="@color/field" />

                <Button
                    android:id="@+id/add_attendee_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/bckgrnd"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:text="@string/add"
                    android:textColor="@color/blue_500"
                    android:textSize="12sp"
                    app:icon="@drawable/ic_baseline_add_24" />

            </com.google.android.material.textfield.TextInputLayout>

            <FrameLayout
                android:id="@+id/chip_group_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/attendees_til">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/attendees_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:chipSpacingVertical="8dp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/time_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/back_fields_drawable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_group_layout">

                <TextView
                    android:id="@+id/time_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/meeting_time"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:textColor="@color/field"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_baseline_access_time_24"
                    app:drawableTint="@color/field" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/room_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/back_fields_drawable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_layout">

                <Spinner
                    android:id="@+id/room_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/room_spinner"
                    android:minWidth="48dp"
                    android:minHeight="48dp" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/check_add_meeting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_meeting_fab"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_check_24"
        app:backgroundTint="@color/red_A400"
        app:tint="@color/white" />

</FrameLayout>